--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,6 @@
 @import 'helpers/variables';
 @import 'helpers/reset';
+@import 'helpers/fonts';
+@import 'helpers/buttons';
 
 @import 'layout/home';
