Presentation section done

--- a/sass/helpers/variables.scss
+++ b/sass/helpers/variables.scss
@@ -9,3 +9,6 @@ $light-grey: #DCDCDC;
 // FONTS 
 $title: 'Crimson Pro', serif;
 $text: 'Poppins', sans-serif;
+
+// SIZES 
+$layout-desktop-size: 1050px;
