--- a/sass/helpers/buttons.scss
+++ b/sass/helpers/buttons.scss
@@ -7,6 +7,7 @@ button{
     box-sizing: border-box;
     border:solid;
     transition:all 0.3s;
+    cursor:pointer;
 
     &.plain{
         background:$red;
