journey section done

--- a/sass/helpers/variables.scss
+++ b/sass/helpers/variables.scss
@@ -5,6 +5,7 @@ $red-accent: #8E010F;
 $red-clicked: #DE515F;
 $dark-grey: #282828;
 $light-grey: #DCDCDC;
+$brown: #3B2B2B;
 
 // FONTS 
 $title: 'Crimson Pro', serif;
