--- a/sass/layout/darkness.scss
+++ b/sass/layout/darkness.scss
@@ -24,6 +24,7 @@ section#darkness{
         h2{
             font-size:1.6em;
             margin:0 0 25px 0;
+            text-transform: capitalize;
         }
     }
 }
